# dev

./: output.txt
CS106L/: CMakeLists.txt  Lec-13-2.cpp  operator.cpp
CSAPP/Lec-5/: control.s
CSAPP/Lec11/: locality.s
CSAPP/Lec7/: data-passing.c  data-passing.s  pcount.c  pcount.s
CSAPP/Lec9/: echo.s  memory-test  memory-test.c
FUN/: .gdb_history  elf  elf.c
ads/: avl-tree.cpp  avl-tree.out  document-distance.cpp  gpt-4-b-plus.cpp  gpt-4-b-plus.out  leftist.cpp  leftist.out
ads/document-distance/: dist.out  document-distance  document-distance.cpp  stmr.c
cs106l/: Lec-12.cpp  Lec-13-3.cpp  Lec-13.cpp  if-constexpr.cpp
csapp/: csapp.h
csapp/lec11/: locality  locality.c
csapp/lec15/: printf-deadlock  printf-deadlock.c  sigint  sigint.c  simple-shell.c
csapp/lec16/: file-io-test  file-io-test.c  io-redirection  io-redirection.c  io-redirection.txt  rio-test  rio-test.c  safe-io.c  safe-io.h
csapp/lec19-20/: malloc-test  malloc-test.c
csapp/lec5/: control.c
csapp/lec7/: call_incr.c  call_incr.s
csapp/lec9/: canary  canary.c  echo  echo.c
fun/: p-adic.py
games101/: medians  medians.cpp
haskell-mooc/exercises/: Set13a.hs  Set13b.hs
na/lec-2/: bisection-simple.py  lab2.c  precision-calc.cpp  precision-calc.out
na/original/: hamming.out  hamming.txt
na/using-integration/: better-sol-1e4.txt  (+1 more)
nju-pl/: 3ac.c
oop/: r-value-ref-demo.cpp  r-value-ref-demo.out
oop/lab2/: CMakeLists.txt  README.md  main.cpp
pku-plt/: a.ml  a.out  data-type.ml  pattern-matching.ml  split-string.ml  thump.ml
sql/: main.c
test/: 1.c  2.c  3.c
(+73 files in other folders)
